--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -51,6 +51,7 @@ jobs:
         uses: actions/upload-artifact@v4.4.3
         with:
           name: dotenv-linux-x86
+          path: ./dotenv-linux-x86
       - name: Upload OSX Intel artifact
         uses: actions/upload-artifact@v4.4.3
         with:
