--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -39,13 +39,24 @@ jobs:
 
       - name: Run tests
         run: deno test -A
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Setup repo
+        uses: actions/checkout@v4
+
+      - name: Setup Deno
+        uses: denoland/setup-deno@v1
+        with:
+          deno-version: v2.x
 
       - name: Build for linux
-        run: deno task build --target x86_64-unknown-linux-gnu --output dotenv-linux-x86
+        run: deno compile main.ts --target x86_64-unknown-linux-gnu --output dotenv-linux-x86
       - name: Build for OSX (Intel)
-        run: deno task build --target x86_64-apple-darwin --output dotenv-darwin-x86
+        run: deno compile main.ts --target x86_64-apple-darwin --output dotenv-darwin-x86
       - name: Build for OSX (Apple Silicon)
-        run: deno task build --target aarch64-apple-darwin --output dotenv-darwin-aarch64
+        run: deno compile main.ts --target aarch64-apple-darwin --output dotenv-darwin-aarch64
 
       - name: Upload linux artifact
         uses: actions/upload-artifact@v4.4.3
