--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -52,7 +52,7 @@ jobs:
           deno-version: v2.x
 
       - name: Build for linux
-        run: deno compile main.ts --target x86_64-unknown-linux-gnu --output dotenv-linux-x86 -RWE main.ts 
+        run: deno compile --target x86_64-unknown-linux-gnu --output dotenv-linux-x86 -RWE main.ts 
       - name: Upload linux artifact
         uses: actions/upload-artifact@v4.4.3
         with:
@@ -60,7 +60,7 @@ jobs:
           path: ./dotenv-linux-x86
 
       - name: Build for OSX (Intel)
-        run: deno compile main.ts --target x86_64-apple-darwin --output dotenv-darwin-x86 -RWE main.ts 
+        run: deno compile --target x86_64-apple-darwin --output dotenv-darwin-x86 -RWE main.ts 
       - name: Upload OSX Intel artifact
         uses: actions/upload-artifact@v4.4.3
         with:
