--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -75,3 +75,12 @@ jobs:
           name: dotenv-darwin-aarch64
           path: ./dotenv-darwin-aarch64
 
+      - name: Release
+        uses: softprops/action-gh-release@v2
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: |
+            dotenv-darwin-aarch64
+            dotenv-linux-x86
+            dotenv-darwin-x86
+
