--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -11,6 +11,9 @@ name: Deno
 on:
   push:
     branches: ["main"]
+    tags:
+      - "v*.*.*"
+      - "latest"
   pull_request:
     branches: ["main"]
 
