--- a/deno.json
+++ b/deno.json
@@ -3,7 +3,7 @@
     "build": "deno compile -RWE main.ts"
   },
   "imports": {
-    "@std/assert": "jsr:@std/assert@1",
-    "cliffy/command": "https://deno.land/x/cliffy@v1.0.0-rc.4/command/mod.ts"
+    "@cliffy/command": "jsr:@cliffy/command@^1.0.0-rc.7",
+    "@std/assert": "jsr:@std/assert@1"
   }
 }
